<resources>
    <string name="app_name">Visualize</string>

    <string name="action_settings">Settings</string>

    <!-- - - - - - - - - - - - - - - -
          - Used by Preferences  -
          - - - - - - - - - - - - - - - -->
    <!-- Label for the show bass checkbox preference -->
    <string name="pref_show_bass_label">Show Bass</string>
    <!-- Key name for storing bass in SharedPreferences -->
    <string name="pref_show_bass_key" translatable="false">show_bass</string>

    <!-- Label for the show mid range checkbox preference -->
    <string name="pref_show_mid_range_label">Show Mid Range</string>
    <!-- Key name for storing mid range in SharedPreferences -->
    <string name="pref_show_mid_range_key" translatable="false">show_mid_range</string>

    <!-- Label for the show treble checkbox preference -->
    <string name="pref_show_treble_label">Show Treble</string>
    <!-- Key name for storing treble in SharedPreferences -->
    <string name="pref_show_treble_key" translatable="false">show_treble</string>

    <!-- Summary for Checkboxes -->
    <string name="pref_show_true">Shown</string>
    <string name="pref_show_false">Hidden</string>

    <string name="pref_list_colors_label">Select Color</string>
    <string name="pref_list_colors_key" translatable="false">select_color</string>

    <string name="pref_list_colors_red_label">Red</string>
    <string name="pref_list_colors_blue_label">Blue</string>
    <string name="pref_list_colors_green_label">Green</string>

    <string name="pref_list_colors_red_value" translatable="false">red</string>
    <string name="pref_list_colors_blue_value" translatable="false">blue</string>
    <string name="pref_list_colors_green_value" translatable="false">green</string>

    <string name="pref_list_colors_default" translatable="false">@string/pref_list_colors_red_value</string>
</resources>
